# FruitProposal

./: .gitignore  README.md  metrics_history.pt  pyproject.toml  text.txt
attachment/RadianceCloud/: bounding_boxes.npy  semantic_radiance_field_20250527_191954.pt  semantic_radiance_field_20250527_192514.pt  slice_points.pt
attachment/scripts/: cKDTree.py  clustering_processing.ipynb  exporter.py  exporter_utils.py  images_from_slices.ipynb  pre_processing.py  pre_processing_test.py  read_radiance.py  read_semantic_radiance.py  script3.py  script4.py  script5.py  scripts.py  visualize_points.py
attachment/scripts/bboxes/: clustering_processing.ipynb  images_from_slices.ipynb  pre_processing.py  pre_processing_test.py  visualize_points.py
datasets/01_apple_tree_1024x1024_#300/: auxiliar.py  pixi.toml  script.py  script2.py  script3.py  transforms copy 2.json  transforms copy 3.json  transforms copy 4.json
datasets/SynthBinRGBData/: transforms.json
datasets/SynthBinRGBData/camera_paths/: 2025-05-27-01-02-19.json
fruit_proposal/: fruit_proposal.py  fruit_proposal_config.py  fruit_proposal_field.py  method_configs.py  multyTraining.py
fruit_proposal/callbacks/: FruitProposalCallback.py
fruit_proposal/configs/: dataparser_configs.py  method_configs.py
fruit_proposal/data/: fruit_proposal_datamanager.py  fruit_proposal_dataparser.py  fruit_proposal_dataset.py
fruit_proposal/exporter/: exporter_utils.py
fruit_proposal/models/: semantic_is_enough_nerf.py
fruit_proposal/scripts/: exporter.py
scripts/: exporter.py
(+10 files in other folders)
