[project]
name = "fruit_proposal"
version = "0.0.1"

dependencies=[
    "nerfstudio"
]

[tool.setuptools.packages.find]
include = ["fruit_proposal*"]

#[project.scripts]
# ns-export-semantics = "fruit_nerf.scripts.exporter:entrypoint"
# ns-process-fruit-data = "fruit_nerf.scripts.process_data:entrypoint"